Clean up and bug-fix the Swing codebase
Bug fixes:
- Save As: cancelling the overwrite confirmation no longer writes the
  file anyway, and confirming no longer writes it twice.
- Open: a corrupt or unreadable PNG now shows the unsupported-size
  dialog instead of crashing with an NPE, and no longer resets the
  editor state before validating the image.
- The file chooser now remembers the parent directory of the last
  opened/saved file instead of the file path itself.
- Window title now shows the current file name and a dirty marker.
- The skin upload menu item points at the current
  minecraft.net/msaprofile page and uses java.net.URI instead of the
  deprecated URL constructor.

Cleanup:
- Delete debug-only classes (TestFrame, U, HSBcircle, IU) and the
  main() methods, dead fields, unused listeners, and commented-out
  code scattered across the UI classes.
- Rename unit -> PixelChange, run the UI on the EDT via invokeLater,
  use multi-catch / try-with-resources, and replace magic numbers with
  Frame.MAXIMIZED_BOTH and a TRANSPARENT constant.
- Keyboard tool switching: fold the duplicated keyTyped/keyPressed
  if-chains into one handler (keyTyped read getKeyCode(), which is
  always 0 there, so it never did anything).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TZ6pGW9V9JNmBThJB2yrja